# ml-oddbox-forecasting

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_model_dev.ipynb
scripts/: run_pipeline.py
src/oddbox_forecasting/: config.py  data_loader.py  features.py  models.py  pipeline.py  utils.py
tests/: run_tests.py  test_features.py  test_models.py  test_utils.py
visuals/plots/: baseline.py  evaluation.py
